--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,3 +1,4 @@
+
 body {
   padding:50px;
   font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -97,6 +98,53 @@ header {
   width:270px;
   float:left;
   position:fixed;
+  
+  height: 100%;
+  background-color: #26a69a;
+  top: 0; left: 0;
+  color: #fff;
+
+  box-shadow: 0 2px 8px #222;
+}
+
+header h1 {
+    height: 30px;
+    color: #fff;
+    padding: 1em;
+    border-bottom: 1px solid #ddd;
+}
+
+header > ul {
+    height: calc(100% - 30px);
+    overflow-y: auto;
+    padding: 0;
+}
+
+header a {
+    color: #fff;
+}
+
+header > ul > li {
+    padding: 0;
+}
+
+header > ul > li > a {
+    font-size: 1.25em;
+    padding: 0 1.5em;
+}
+
+header > ul > li > ul {
+    padding: 0;
+    list-style: none;
+}
+
+header > ul > li > ul > li {
+    padding: .25em 0 .25em 3em;
+}
+
+header > ul > li > ul > li:hover {
+    background-color: rgba(0, 0, 0, .28);
+    border-radius: 2px;
 }
 
 strong {
